--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.project.ProjectFragment">
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <data>
+
+    </data>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="5555555" />
+        tools:context=".ui.project.ProjectFragment">
 
-</FrameLayout>
+        <androidx.appcompat.widget.Toolbar
+            toolbar:title="项目"
+            toolbar:titleTextColor="@color/white"
+            android:background="#1A237E"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/project_toolbar" />
+
+
+
+    </LinearLayout>
+</layout>
