--- a/app/src/main/res/layout/tree_colors_item.xml
+++ b/app/src/main/res/layout/tree_colors_item.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:paddingLeft="10dp">
 
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="20dp"
         android:gravity="center|left"
         android:orientation="horizontal"
@@ -16,7 +16,26 @@
         tools:ignore="RtlHardcoded">
 
         <TextView
-            android:id="@+id/photo_item_source"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/red_border"
+            android:padding="1dp"
+            android:text="置顶"
+            android:textColor="#FF0000"
+            android:textSize="8dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/red_border"
+            android:padding="1dp"
+            android:text="新"
+            android:textColor="#FF0000"
+            android:textSize="8dp" />
+
+        <TextView
+            android:id="@+id/tree_colors_item_source"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -27,60 +46,49 @@
             android:textSize="8dp" />
 
         <TextView
-            android:id="@+id/photo_item_author"
+            android:id="@+id/tree_colors_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="ASCLL13" />
+            android:text="ASCLL13"
+            android:textSize="10dp" />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/photo_item_photo"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/test"
+
+    <TextView
+        android:id="@+id/tree_colors_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/photo_item_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/photo_item_photo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
-
-    <TextView
-        android:id="@+id/photo_item_kinds"
+        android:id="@+id/tree_colors_kinds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="开源项目主Tab/未分类"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.116"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.913" />
+        app:layout_constraintVertical_bias="0.964" />
 
     <TextView
-        android:id="@+id/photo_item_time"
+        android:id="@+id/tree_colors_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:text="2022-03-07 18:04"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.009" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
