更新了写些杂项

--- a/app/src/main/res/layout/first_item.xml
+++ b/app/src/main/res/layout/first_item.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="80dp"
-    android:paddingLeft="10dp">
+    android:clickable="true"
+    android:focusable="true"
+    android:paddingLeft="10dp"
+    >
 
     <LinearLayout
         android:layout_width="200dp"
