--- a/app/src/main/res/layout/just_red_item.xml
+++ b/app/src/main/res/layout/just_red_item.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     android:minHeight="80dp"
     android:paddingLeft="10dp">
 
@@ -22,7 +24,6 @@
             android:layout_height="wrap_content"
             android:background="@drawable/red_border"
             android:padding="1dp"
-            android:text="公众号"
             android:textColor="#FF0000"
             android:textSize="8dp" />
 
@@ -31,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="ASCLL13"
             android:textSize="10dp" />
 
     </LinearLayout>
@@ -52,7 +52,6 @@
         android:id="@+id/just_red_item_kinds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="开源项目主Tab/未分类"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
