--- a/app/src/main/res/layout/none_color_item.xml
+++ b/app/src/main/res/layout/none_color_item.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="80dp"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_marginTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
